# alef

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  .taplo.toml  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  Taskfile.yml  alef.toml  deny.toml
crates/alef-backend-go/: Cargo.toml  README.md
crates/alef-backend-go/src/: gen_bindings.rs  gen_visitor.rs  lib.rs  trait_bridge.rs  type_map.rs
crates/alef-backend-go/src/gen_bindings/: functions.rs  methods.rs  mod.rs  types.rs
crates/alef-backend-go/tests/: gen_bindings_test.rs
crates/alef-backend-java/: Cargo.toml  README.md
crates/alef-backend-java/src/: gen_bindings.rs  gen_visitor.rs  lib.rs  type_map.rs
crates/alef-backend-java/src/gen_bindings/: facade.rs  ffi_class.rs  helpers.rs  mod.rs  native_lib.rs  trait_bridge.rs  types.rs
crates/alef-backend-java/src/gen_visitor/: callbacks.rs  files.rs  helpers.rs  mod.rs
crates/alef-backend-java/tests/: gen_bindings_test.rs  snapshot_test.rs
crates/alef-backend-magnus/: Cargo.toml  README.md
crates/alef-backend-magnus/src/: gen_bindings.rs  gen_stubs.rs  trait_bridge.rs  type_map.rs
crates/alef-backend-magnus/src/gen_bindings/: classes.rs  functions.rs  mod.rs
crates/alef-backend-magnus/tests/: gen_bindings_test.rs  gen_stubs_test.rs
crates/alef-backend-napi/: Cargo.toml  README.md
crates/alef-backend-napi/src/: gen_bindings.rs  trait_bridge.rs  type_map.rs
crates/alef-backend-napi/src/gen_bindings/: enums.rs  errors.rs  functions.rs  methods.rs  mod.rs  types.rs
crates/alef-backend-napi/tests/: gen_bindings_test.rs
crates/alef-backend-wasm/: Cargo.toml  README.md
crates/alef-backend-wasm/src/: gen_bindings.rs  trait_bridge.rs
crates/alef-backend-wasm/src/gen_bindings/: enums.rs  errors.rs  functions.rs  methods.rs  mod.rs  types.rs
crates/alef-backend-wasm/tests/: gen_bindings_test.rs
crates/alef-cli/: Cargo.toml  README.md
crates/alef-cli/src/: cache.rs  dispatch.rs  main.rs  pipeline.rs  registry.rs  version_pin.rs
crates/alef-cli/src/commands/: check_registry.rs  go_tag.rs  mod.rs  release_metadata.rs  validate_versions.rs
crates/alef-cli/src/pipeline/: commands.rs  extract.rs  format.rs  generate.rs  helpers.rs  mod.rs  version.rs
crates/alef-cli/tests/: load_config.rs
crates/alef-codegen/: Cargo.toml  README.md
crates/alef-codegen/src/: builder.rs  config_gen.rs  conversions.rs  doc_emission.rs  error_gen.rs  generators.rs  lib.rs  shared.rs  type_mapper.rs
crates/alef-codegen/src/c_consumer/: mod.rs
crates/alef-codegen/src/conversions/: binding_to_core.rs  core_to_binding.rs  enums.rs  helpers.rs  mod.rs
crates/alef-codegen/src/generators/: binding_helpers.rs  enums.rs  functions.rs  methods.rs  mod.rs  structs.rs  trait_bridge.rs
crates/alef-codegen/tests/: integration_test.rs
crates/alef-docs/: Cargo.toml  README.md
crates/alef-docs/src/: descriptions.rs  doc_cleaning.rs  formatting.rs  lib.rs  naming.rs  signatures.rs  sorting.rs  test_helpers.rs  type_mapping.rs
crates/alef-e2e/: Cargo.toml  README.md
crates/alef-e2e/schema/: fixture.schema.json
crates/alef-e2e/src/: config.rs  escape.rs  field_access.rs  fixture.rs  format.rs  lib.rs  scaffold.rs  validate.rs
crates/alef-e2e/src/codegen/: brew.rs  c.rs  csharp.rs  dart.rs  elixir.rs  gleam.rs  go.rs  java.rs  kotlin.rs  mod.rs  php.rs  python.rs  r.rs  ruby.rs  (+5 more)
crates/alef-e2e/tests/: c_result_type_name.rs  cargo_toml_generation.rs  language_resolution.rs  mock_server_headers.rs  rust_call_overrides.rs  rust_function_call_fixtures.rs  wasm_non_http_fixtures.rs
crates/alef-extract/: Cargo.toml  README.md
crates/alef-extract/src/: extractor.rs  type_resolver.rs
crates/alef-publish/: Cargo.toml
crates/alef-publish/src/: ffi_stage.rs  lib.rs  platform.rs
crates/alef-readme/: Cargo.toml  README.md
crates/alef-readme/src/: lib.rs
crates/alef-scaffold/: Cargo.toml  README.md
crates/alef-scaffold/src/: lib.rs  naming.rs  tests.rs
crates/eisberg-adapters/: Cargo.toml
crates/eisberg-adapters/src/: async_method.rs  callback_bridge.rs  lib.rs  streaming.rs  sync_function.rs
crates/eisberg-backend-csharp/: Cargo.toml
crates/eisberg-backend-csharp/src/: gen_bindings.rs  lib.rs  type_map.rs
crates/eisberg-backend-csharp/tests/: example_generation.rs  gen_bindings_test.rs
crates/eisberg-backend-extendr/: Cargo.toml
crates/eisberg-backend-extendr/src/: gen_bindings.rs  lib.rs  type_map.rs
crates/eisberg-backend-ffi/: Cargo.toml
crates/eisberg-backend-ffi/src/: gen_bindings.rs  lib.rs  type_map.rs
crates/eisberg-backend-go/: Cargo.toml
crates/eisberg-backend-go/src/: gen_bindings.rs  lib.rs  type_map.rs
crates/eisberg-backend-java/: Cargo.toml
crates/eisberg-backend-java/src/: gen_bindings.rs  lib.rs  type_map.rs
crates/eisberg-backend-java/tests/: gen_bindings_test.rs  snapshot_test.rs
crates/eisberg-backend-magnus/: Cargo.toml
crates/eisberg-backend-magnus/src/: gen_bindings.rs  gen_stubs.rs  lib.rs  type_map.rs
crates/eisberg-backend-napi/: Cargo.toml
crates/eisberg-backend-napi/src/: gen_bindings.rs  lib.rs  type_map.rs
crates/eisberg-backend-php/: Cargo.toml
crates/eisberg-backend-php/src/: gen_bindings.rs  lib.rs  type_map.rs
crates/eisberg-backend-pyo3/: Cargo.toml
crates/eisberg-backend-pyo3/src/: gen_bindings.rs  gen_stubs.rs  lib.rs  type_map.rs
crates/eisberg-backend-rustler/: Cargo.toml
crates/eisberg-backend-rustler/src/: gen_bindings.rs  lib.rs  type_map.rs
crates/eisberg-backend-wasm/: Cargo.toml
crates/eisberg-backend-wasm/src/: gen_bindings.rs  lib.rs  type_map.rs
crates/eisberg-cli/: Cargo.toml
crates/eisberg-cli/src/: cache.rs  main.rs  pipeline.rs  registry.rs
crates/eisberg-codegen/: Cargo.toml
crates/eisberg-codegen/src/: builder.rs  config_gen.rs  conversions.rs  error_gen.rs  generators.rs  lib.rs  naming.rs  shared.rs  templates.rs  type_mapper.rs
crates/eisberg-core/: Cargo.toml
crates/eisberg-core/src/: backend.rs  config.rs  error.rs  ir.rs  lib.rs
crates/eisberg-extract/: Cargo.toml
crates/eisberg-extract/src/: extractor.rs  lib.rs  type_resolver.rs
(+343 files in other folders)
