[workspace]
resolver = "2"
members = [
    "crates/eisberg-adapters",
    "crates/eisberg-backend-csharp",
    "crates/eisberg-backend-extendr",
    "crates/eisberg-backend-ffi",
    "crates/eisberg-backend-go",
    "crates/eisberg-backend-java",
    "crates/eisberg-backend-magnus",
    "crates/eisberg-backend-napi",
    "crates/eisberg-backend-php",
    "crates/eisberg-backend-pyo3",
    "crates/eisberg-backend-rustler",
    "crates/eisberg-backend-wasm",
    "crates/eisberg-cli",
    "crates/eisberg-codegen",
    "crates/eisberg-core",
    "crates/eisberg-extract",
    "crates/eisberg-readme",
    "crates/eisberg-scaffold",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/kreuzberg-dev/eisberg"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
blake3 = "1"
eisberg-adapters = { path = "crates/eisberg-adapters" }
eisberg-codegen = { path = "crates/eisberg-codegen" }
eisberg-core = { path = "crates/eisberg-core" }
eisberg-extract = { path = "crates/eisberg-extract" }
heck = "0.5"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "visit"] }
thiserror = "2"
toml = "1.1"
tracing = "0.1"
