[workspace]
resolver = "2"
members = [
    "crates/alef-adapters",
    "crates/alef-backend-csharp",
    "crates/alef-backend-extendr",
    "crates/alef-backend-ffi",
    "crates/alef-backend-go",
    "crates/alef-backend-java",
    "crates/alef-backend-magnus",
    "crates/alef-backend-napi",
    "crates/alef-backend-php",
    "crates/alef-backend-pyo3",
    "crates/alef-backend-rustler",
    "crates/alef-backend-wasm",
    "crates/alef-cli",
    "crates/alef-codegen",
    "crates/alef-core",
    "crates/alef-docs",
    "crates/alef-e2e",
    "crates/alef-extract",
    "crates/alef-readme",
    "crates/alef-scaffold",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/kreuzberg-dev/alef"

[workspace.dependencies]
ahash = "0.8"
alef-adapters = { version = "0.2.0", path = "crates/alef-adapters" }
alef-codegen = { version = "0.2.0", path = "crates/alef-codegen" }
alef-core = { version = "0.2.0", path = "crates/alef-core" }
alef-docs = { version = "0.2.0", path = "crates/alef-docs" }
alef-e2e = { version = "0.2.0", path = "crates/alef-e2e" }
alef-extract = { version = "0.2.0", path = "crates/alef-extract" }
anyhow = "1"
blake3 = "1"
heck = "0.5"
minijinja = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
syn = { version = "2", features = ["full", "parsing", "visit"] }
thiserror = "2"
toml = "1.1"
tracing = "0.1"
