[package]
name = "alef-backend-java"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Java (Panama FFM) backend for alef"
repository.workspace = true
readme = "README.md"

[dependencies]
ahash = { workspace = true }
alef-adapters = { workspace = true }
alef-codegen = { version = "0.2.0", path = "../alef-codegen" }
alef-core = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
