[package]
name = "alef-extract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rust source extraction for alef"
readme = "README.md"
repository.workspace = true

[dependencies]
ahash = { workspace = true }
alef-core = { workspace = true }
anyhow = { workspace = true }
quote = "1"
syn = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
