[package]
name = "alef-readme"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "README generator for alef"
readme = "README.md"
repository.workspace = true

[dependencies]
alef-core = { workspace = true }
anyhow = { workspace = true }
