[package]
name = "eisberg-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "FFI adapter pattern generators for eisberg"
repository.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
eisberg-core = { workspace = true }
