[package]
name = "eisberg-backend-extendr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "R (extendr) backend for eisberg"
repository.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
eisberg-adapters = { workspace = true }
eisberg-codegen = { path = "../eisberg-codegen" }
eisberg-core = { workspace = true }
