[package]
name = "eisberg-backend-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "C FFI backend for eisberg"
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
eisberg-adapters = { workspace = true }
eisberg-codegen = { path = "../eisberg-codegen" }
eisberg-core = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
