[package]
name = "eisberg-backend-go"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Go (cgo) backend for eisberg"
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
eisberg-adapters = { workspace = true }
eisberg-codegen = { path = "../eisberg-codegen" }
eisberg-core = { workspace = true }
heck = { workspace = true }
