[package]
name = "eisberg-backend-java"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Java (Panama FFM) backend for eisberg"
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
eisberg-adapters = { workspace = true }
eisberg-codegen = { path = "../eisberg-codegen" }
eisberg-core = { workspace = true }
