[package]
name = "eisberg-backend-napi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Node.js (NAPI-RS) backend for eisberg"
repository.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
eisberg-adapters = { workspace = true }
eisberg-codegen = { path = "../eisberg-codegen" }
eisberg-core = { workspace = true }
