[package]
name = "eisberg-backend-pyo3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Python (PyO3) backend for eisberg"
repository.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
eisberg-adapters = { workspace = true }
eisberg-codegen = { path = "../eisberg-codegen" }
eisberg-core = { workspace = true }
heck = { workspace = true }
