[package]
name = "eisberg-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for the eisberg polyglot binding generator"

[[bin]]
name = "eisberg"
path = "src/main.rs"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
clap = { version = "4", features = ["derive"] }
eisberg-backend-csharp = { path = "../eisberg-backend-csharp" }
eisberg-backend-extendr = { path = "../eisberg-backend-extendr" }
eisberg-backend-ffi = { path = "../eisberg-backend-ffi" }
eisberg-backend-go = { path = "../eisberg-backend-go" }
eisberg-backend-java = { path = "../eisberg-backend-java" }
eisberg-backend-magnus = { path = "../eisberg-backend-magnus" }
eisberg-backend-napi = { path = "../eisberg-backend-napi" }
eisberg-backend-php = { path = "../eisberg-backend-php" }
eisberg-backend-pyo3 = { path = "../eisberg-backend-pyo3" }
eisberg-backend-rustler = { path = "../eisberg-backend-rustler" }
eisberg-backend-wasm = { path = "../eisberg-backend-wasm" }
eisberg-core = { workspace = true }
eisberg-extract = { path = "../eisberg-extract" }
eisberg-readme = { path = "../eisberg-readme" }
eisberg-scaffold = { path = "../eisberg-scaffold" }
regex = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
