[package]
name = "eisberg-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared codegen utilities for the eisberg polyglot binding generator"

[dependencies]
ahash = { workspace = true }
eisberg-core = { workspace = true }
heck = "0.5"
minijinja = "2"
