[package]
name = "eisberg-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types, config schema, and backend trait for the eisberg polyglot binding generator"

[dependencies]
anyhow = { workspace = true }
heck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
