[package]
name = "eisberg-extract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rust source extraction for eisberg"
repository.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
eisberg-core = { workspace = true }
quote = "1"
syn = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
